syntax = "proto3";

option csharp_namespace = "GrpcServices";

service GrpcAuthService {
	rpc GenerateToken(TokenRequest) returns (TokenReply);
}

message TokenRequest {
	string UserName = 1;
	string Password = 2;
	bool IsGuest = 3;
	bool RememberMe = 4;
}

message TokenReply {
	string AccessToken = 1;
}