syntax = "proto3";

option csharp_namespace = "NetAuth.GrpcServices";

service AuthProtoService {
	rpc GenerateToken(AuthRequest) returns (AuthResponse);
}

message AuthRequest {
	string UserName = 1;
	string Password = 2;
	bool IsGuest = 3;
	bool RememberMe = 4;
}

message AuthResponse {
	string AccessToken = 1;
}